@@ -456,6 +456,7 @@
  *                         ap_mpm_query(), and suspended_baton to conn_rec
  * 20140207.6 (2.5.0-dev)  Added ap_log_common().
  * 20140207.7 (2.5.0-dev)  Added ap_force_set_tz().
+ * 20140207.8 (2.5.0-dev)  Added ap_shutdown_conn().
  */
 
 #define MODULE_MAGIC_COOKIE 0x41503235UL /* "AP25" */
@@ -463,7 +464,7 @@
 #ifndef MODULE_MAGIC_NUMBER_MAJOR
 #define MODULE_MAGIC_NUMBER_MAJOR 20140207
 #endif
-#define MODULE_MAGIC_NUMBER_MINOR 7                  /* 0...n */
+#define MODULE_MAGIC_NUMBER_MINOR 8                  /* 0...n */
 
 /**
  * Determine if the server's current MODULE_MAGIC_NUMBER is at least a
